# S24_Qizong_Liang

./: CMakeLists.txt  S24_Qizong_Liang.sln  unique.txt
Notreal/: CMakeLists.txt  Notreal.vcxproj  Notreal.vcxproj.filters
Notreal/Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
Notreal/include/: Notreal.h
Notreal/src/: Image.cpp  Image.h  ImageImplement.h  NotrealApplication.cpp  NotrealApplication.h  NotrealEvents.cpp  NotrealEvents.h  NotrealKeys.h  NotrealWindow.cpp  NotrealWindow.h  Renderer.cpp  Renderer.h  RendererImplement.h  Shader.cpp  Shader.h  ShaderImplement.h  Unit.cpp  Unit.h  Utility.h  WindowImpl.h  pch.h
Notreal/src/codeGLFW/: WindowGLFW.cpp  WindowGLFW.h
Notreal/src/codeOpenGL/: ImageOpenGL.cpp  ImageOpenGL.h  RendererOpenGL.cpp  RendererOpenGL.h  Shader.cpp  ShaderOpenGL.cpp  ShaderOpenGL.h
S24_Qizong_Liang/: CMakeLists.txt  S24_Qizong_Liang.vcxproj  Source.cpp
glad/: glad.vcxproj
glad_open/include/glad/: glad.h
glad_open/src/: glad.c
glfw_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake
glfw_build/src/: cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  update_mappings.vcxproj  update_mappings.vcxproj.filters
glfw_build/src/Release/: glfw3dll.exp  glfw3dll.lib
glfw_build/src/glfw.dir/Release/: glfw3.dll.recipe
glfw_build/src/glfw.dir/Release/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  glfw.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
stbi/: stbi.vcxproj
